[package]
name = "flodgatt"
description = "A blazingly fast drop-in replacement for the Mastodon streaming api server"
version = "0.6.2"
authors = ["Daniel Long Sockwell <daniel@codesections.com", "Julian Laubstein <contact@julianlaubstein.de>"]
edition = "2018"

[dependencies]
log = "0.4.6"
futures = "0.1.26"
tokio = "0.1.19"
warp = { git = "https://github.com/seanmonstar/warp.git"}
serde_json = "1.0.39"
serde_derive = "1.0.90"
serde = "1.0.90"
pretty_env_logger = "0.3.0"
postgres = "0.17.0"
uuid = { version = "0.7", features = ["v4"] }
dotenv = "0.14.0"
postgres-openssl = { git = "https://github.com/sfackler/rust-postgres.git"}
url = "2.1.0"
strum = "0.16.0"
strum_macros = "0.16.0"
r2d2_postgres = "0.16.0"
r2d2 = "0.8.8"
lru = "0.4.3"

[dev-dependencies]
criterion = "0.3"
regex = "1.3.2"

[[bench]]
name = "parse_redis"
harness = false

[[bench]]
name = "read_time"
harness = false


[features]
default = [ "production" ]
production = []
